# gVCF2tFasta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  compile_gVCF2tFasta.sh  compile_gVCF2tFasta.sh~  gVCF2tFasta_help.txt  package-lock.json  package.json  report.md  run_examples_gVCF2tFasta.sh  run_examples_gVCF2tFasta.sh~  run_examples_vcf2tfa.sh  vcf2tfa_help.txt
.github/workflows/: cmake-multi-platform.yml
Examples/: example.tfa.index  example.vcf  multipleVCF_2pop.vcf  pdulcis26.chromosomes.lengths  pdulcis26.contigs_Pd1-8.fa  pdulcis26.contigs_Pd1-8.fa.fai  pool.tfa.index  pool_p10.vcf  prueba_Eche_ref.fa  prueba_Eche_ref.fa.fai  ref.fa  ref.fa.gz.fai  ref.fa.gz.gzi
Examples/expected_results_v0.2.0/: TEST_almond_10lines.tfa.gz.tbi  example.tfa.gz.tbi  example_mult.tfa.gz.tbi  example_mult.tfa.index  pool.tfa  pool.tfa.gz.tbi
nbproject/: Makefile-Debug.mk  Makefile-Debug.mk~  Makefile-Release.mk  Makefile-Release.mk~  Makefile-impl.mk  Makefile-variables.mk  Makefile-variables.mk~  Package-Debug.bash  Package-Debug.bash~  Package-Release.bash  Package-Release.bash~  configurations.xml  configurations.xml~  project.xml
nbproject/private/: configurations.xml  private.xml
sources/: CFai.cpp  CFai.h  CFasta.cpp  CFasta.h  CStringTools.cpp  CStringTools.h  CTFasta.cpp  CTFasta.h  CVCF.cpp  CVCF.h  File.h  main.cpp  main.cpp~  zindex.c  zutil.c  zutil.h
src/: CFasta.cpp  CFasta.h  CStringTools.cpp  CTFasta.cpp  CTFasta.h  CVCF.cpp  CVCF.h  File.cpp  File.h  log.c  log.h  main.cpp  zindex.h
tests/: README.md  gvcf2tfasta.tests.bats  vcf2tfa.tests.bats
